# CSA

./: cartoon.c  container.h  documentary.h  drama.c  film.c  main.c
ASM/: a.out  cartoon.asm  compile.sh  container.asm  documentary.asm  drama.asm  film.asm  main.asm  output1  output2
ASM/Report/: Description
Dynamic/: Cartoon.py  Container.py  Documentary.py  Drama.py  Film.py  Utilities.py  main.py  output1  output2
Dynamic/Report/: Description
Dynamic/Tests/: input1  input4  input6
OOP/: cartoon.cpp  cartoon.h  container.cpp  container.h  documentary.cpp  documentary.h  drama.cpp  drama.h  film.cpp  film.h  main.cpp  utilities.h
OOP/Report/: Description  Functions  Types
OOP/Tests/: input2  input3  input5
Procedure/: a.out  cartoon.c  cartoon.h  container.c  documentary.c  drama.h  film.c  film.h  main.c  output1  output2  utilities.h
Procedure/Report/: Description  Functions  Types
Procedure/Tests/: input1  input2  input3  input6
Tests/: input4  input5
Threads/: Accountant.cpp  Accountant.h  CMakeLists.txt  Container.cpp  Container.h  Loader.cpp  Loader.h  Storage.cpp  Storage.h  Thief.cpp  Thief.h  main.cpp
Threads/Report/: Description
